--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 </div>
                 
             <div class="collapse navbar-collapse" id="mainNavBar">
-                <ul class="nav navbar-nav">
+                <ul class="nav navbar-nav ms-auto">
                     <li><a href="#about" class="nav-link text-white">About</a></li>
                     <li><a href="#music" class="nav-link text-white">Music</a></li>
                     <li><a href="#contact" class="nav-link text-white">Contact</a></li>
