music section commit

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             </section>
 
             <!--Music Section--> 
-            <section class="containter py-5  justify-content-center " id="musicSection">
+            <section class="containter py-5 " id="musicSection">
                 <h2> Our Music</h2>
 
             </section>
