--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
         
             <section class="container py-5" id="musicSection">
                 <h2>Who we are</h2>
+                <p>Longtooth is a Rochester, Ny Metal band that was formed in 1997 by Jack Burnett and Paul Van Sant</p>
             </section>
 
             <!--About Section-->
@@ -58,7 +59,7 @@
                 <div class="container" id="bandMemberContainer">
                     <div class="row"> 
                         <div class="col-md-4 col-sm-6 d-flex mb-4 justify-content-center">
-                            <div class="card">
+                            <div class="card text-bg-dark">
                                 <img src="./assets/img/musician2.jpg" class="card-img-top img-fluid mx-auto mt-3" alt="musician player who has long hair sitting in a chair looking straight forward">
                                 <div class="card-body">
                                    <h5 class="card-title">member 1/ Jack Burnett </h5> 
@@ -68,21 +69,21 @@
                         </div>
                         <!--/FirstBandMember-->
                         <div class="col-md-4 col-sm-6 d-flex mb-4 justify-content-center">
-                            <div class="card">
+                            <div class="card text-bg-dark">
                                 <img src="./assets/img/musician3.jpg" class="card-img-top img-fluid mx-auto mt-3" alt="musician player who has long hair sitting in a chair looking straight forward">
                                 <div class="card-body">
                                    <h5 class="card-title">member 2/ Paul Van Sant</h5> 
-                                   <h5 class="card-text card-text-center">Jack is lead and Rhythm guitar he is the lead singer and songwriter of Longtooth.</h5>
+                                   <h5 class="card-text card-text-center"> Paul plays bass guitar for longtooth. Pual started playing the upstate New york thruway circuit in 1984 and has played with Rochester legend SCORCHER.</h5>
                                 </div>
                             </div>
                         </div>
                         <!--/SecondBandMember-->
                         <div class="col-md-4 col-sm-6 d-flex mb-4 justify-content-center">
-                            <div class="card">
+                            <div class="card text-bg-dark">
                                 <img src="./assets/img/musician1.jpg" class="card-img-top img-fluid mx-auto mt-3" alt="musician player who has long hair sitting in a chair looking straight forward">
                                 <div class="card-body">
                                    <h5 class="card-title">member 3/  AJ Secash  </h5> 
-                                   <h5 class="card-text card-text-center">Jack is lead and Rhythm guitar he is the lead singer and songwriter of Longtooth.</h5>
+                                   <h5 class="card-text card-text-center">Aj is the drummer and percussionist For longtooth.  Aj has Played a variety of different projects and collaborations all over Rochester.</h5>
                                 </div>
                             </div>
                         </div>
