--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             <section id="hero" class="d-flex justify-content-center align-items-center"> 
                 <!--<h2 class="text-black text-center">Longtooth</h2>-->
                 <div>
-                <img src="./assets/img/groupPhoto2.jpg" class="img-fluid opacity-75">
+                <img src="./assets/img/groupPhoto2Compressed.jpg" loading="lazy" class="img-fluid opacity-75" alt="group photo of three men standing in black leather coats in front of a brick wall ">
                 </div>
             </section>
 
@@ -60,7 +60,7 @@
                     <div class="row"> 
                         <div class="col-md-4 col-sm-6 d-flex mb-4 justify-content-center">
                             <div class="card text-bg-dark">
-                                <img src="./assets/img/musician2.jpg" class="card-img-top img-fluid mx-auto mt-3" alt="musician player who has long hair sitting in a chair looking straight forward">
+                                <img src="./assets/img/musician2Compressed.jpg" class="card-img-top img-fluid mx-auto mt-3" alt="musician player who has long hair sitting in a chair looking straight forward">
                                 <div class="card-body">
                                    <h5 class="card-title">member 1/ Jack Burnett </h5> 
                                    <h5 class="card-text card-text-center">Jack is lead and Rhythm guitar he is the lead singer and songwriter of Longtooth.</h5>
@@ -70,7 +70,7 @@
                         <!--/FirstBandMember-->
                         <div class="col-md-4 col-sm-6 d-flex mb-4 justify-content-center">
                             <div class="card text-bg-dark">
-                                <img src="./assets/img/musician3.jpg" class="card-img-top img-fluid mx-auto mt-3" alt="musician player who has long hair sitting in a chair looking straight forward">
+                                <img src="./assets/img/musician3Compressed.jpg" class="card-img-top img-fluid mx-auto mt-3" alt="musician player who has long hair sitting in a chair looking straight forward">
                                 <div class="card-body">
                                    <h5 class="card-title">member 2/ Paul Van Sant</h5> 
                                    <h5 class="card-text card-text-center"> Paul plays bass guitar for longtooth. Pual started playing the upstate New york thruway circuit in 1984 and has played with Rochester legend SCORCHER.</h5>
@@ -80,7 +80,7 @@
                         <!--/SecondBandMember-->
                         <div class="col-md-4 col-sm-6 d-flex mb-4 justify-content-center">
                             <div class="card text-bg-dark">
-                                <img src="./assets/img/musician1.jpg" class="card-img-top img-fluid mx-auto mt-3" alt="musician player who has long hair sitting in a chair looking straight forward">
+                                <img src="./assets/img/musician1Compressed.jpg" class="card-img-top img-fluid mx-auto mt-3" alt="musician player who has long hair sitting in a chair looking straight forward">
                                 <div class="card-body">
                                    <h5 class="card-title">member 3/  AJ Secash  </h5> 
                                    <h5 class="card-text card-text-center">Aj is the drummer and percussionist For longtooth.  Aj has Played a variety of different projects and collaborations all over Rochester.</h5>
