--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                         <!--/FirstBandMember-->
                         <div class="col-md-4 col-sm-6 d-flex mb-4 justify-content-center">
                             <div class="card text-bg-dark">
-                                <img src="./assets/img/musician3Compressed.jpg" class="card-img-top img-fluid mx-auto mt-3" alt="musician player who has long hair sitting in a chair looking straight forward">
+                                <img src="./assets/img/musician3Compressed.jpg" class="card-img-top img-fluid mx-auto mt-3" loading="lazy" alt="musician player who has long hair sitting in a chair looking straight forward">
                                 <div class="card-body">
                                    <h5 class="card-title">member 2/ Paul Van Sant</h5> 
                                    <h5 class="card-text card-text-center"> Paul plays bass guitar for longtooth. Pual started playing the upstate New york thruway circuit in 1984 and has played with Rochester legend SCORCHER.</h5>
@@ -80,7 +80,7 @@
                         <!--/SecondBandMember-->
                         <div class="col-md-4 col-sm-6 d-flex mb-4 justify-content-center">
                             <div class="card text-bg-dark">
-                                <img src="./assets/img/musician1Compressed.jpg" class="card-img-top img-fluid mx-auto mt-3" alt="musician player who has long hair sitting in a chair looking straight forward">
+                                <img src="./assets/img/musician1Compressed.jpg" class="card-img-top img-fluid mx-auto mt-3" loading="lazy" alt="musician player who has long hair sitting in a chair looking straight forward">
                                 <div class="card-body">
                                    <h5 class="card-title">member 3/  AJ Secash  </h5> 
                                    <h5 class="card-text card-text-center">Aj is the drummer and percussionist For longtooth.  Aj has Played a variety of different projects and collaborations all over Rochester.</h5>
@@ -101,7 +101,7 @@
 
             </section>
 
-            <img src="./assets/img/groupPhoto3.jpg" class="img-fluid opacity-75">
+            <img src="./assets/img/groupPhoto3.jpg" loading="lazy" class="img-fluid opacity-75" alt="Three men sitting in chairs in front of a colorful wall filled with oranges and blues">
         </main>
 
         <footer class="bg-dark text-white text-center py-3" id="footer">
