--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
     </head>
     <body>
          <!--Navigation Menu-->
-         <nav class="navbar navbar-expand-lg navbar-fixed-top navbar-dark bg-dark">
+         <nav class="navbar navbar-expand-lg navbar-fixed-top navbar-dark" style="background-color: black;">
             <div class="container-fluid" id="navbarContainter">
-                <a class="navbar-brand" href="#">Longtooth</a>
+                <a class="navbar-brand" href="#"> <img src="/assets/img/logo.jpg" alt="Bootstrap" width="500" height="100"></a>
                 <div class="navbar-header">
                     <button type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#mainNavBar" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
@@ -27,14 +27,14 @@
             <div class="collapse navbar-collapse" id="mainNavBar">
                 <ul class="nav navbar-nav ms-auto">
                     <li><a href="#about" class="nav-link text-white">About</a></li>
-                    <li><a href="#music" class="nav-link text-white">Music</a></li>
+                    <li><a href="#listen" class="nav-link text-white">Listen</a></li>
                     <li><a href="#contact" class="nav-link text-white">Contact</a></li>
                   </ul>
 
             </div>
         </div>
         </nav>
-        <header class="d-flex justify-content-between p-3 bg-dark text-white">
+        <header class="d-flex justify-content-between p-3 text-white" style="background-color: black;">
         
         </header>
 
