--- a/index.html
+++ b/index.html
@@ -97,8 +97,14 @@
 
             <!--Music Section--> 
             <section class="containter py-5 " id="musicSection">
-                <h2> Our Music</h2>
-                
+                <h2>Our Music</h2>
+                <!--Music Player-->
+                <iframe width="50%" height="300" scrolling="no" frameborder="no" 
+                allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/1929659739&color=%231b1a20&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe>
+                <div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"><a href="https://soundcloud.com/longtooth-898384277" title="Longtooth" target="_blank" style="color: #cccccc; text-decoration: none;">Longtooth</a> · <a href="https://soundcloud.com/longtooth-898384277/sets/long-tooth" 
+                    title="Long Tooth" target="_blank" style="color: #cccccc; text-decoration: none;">Long Tooth</a>
+                </div>
+                <!--End of music player block-->
 
             </section>
 
