--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@
          <!--Navigation Menu-->
          <nav class="navbar navbar-expand-lg navbar-fixed-top navbar-dark" style="background-color: black;">
             <div class="container-fluid" id="navbarContainter">
-                <a class="navbar-brand" href="#"> <img src="/assets/img/logo.jpg" alt="Bootstrap" width="500" height="100"></a>
+                <a class="navbar-brand" href="#">
+                     <img src="/assets/img/logo.jpg" alt="Longtooth logo with neon green text and picture of wolf" class="img-fluid"  style="max-width: 100px; height: auto;">
+                    </a>
                 <div class="navbar-header">
                     <button type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#mainNavBar" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
@@ -99,11 +101,13 @@
             <section class="containter py-5 " id="musicSection">
                 <h2>Our Music</h2>
                 <!--Music Player-->
+                <div class="embed-responsive embed-responsive-16by9">
                 <iframe width="50%" height="300" scrolling="no" frameborder="no" 
                 allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/1929659739&color=%231b1a20&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe>
                 <div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"><a href="https://soundcloud.com/longtooth-898384277" title="Longtooth" target="_blank" style="color: #cccccc; text-decoration: none;">Longtooth</a> · <a href="https://soundcloud.com/longtooth-898384277/sets/long-tooth" 
                     title="Long Tooth" target="_blank" style="color: #cccccc; text-decoration: none;">Long Tooth</a>
                 </div>
+            </div>
                 <!--End of music player block-->
 
             </section>
