--- a/index.html
+++ b/index.html
@@ -78,8 +78,12 @@
                 </div> -->
             </section>
 
-        <section>
+        <section id="gigs" class="gig-section">
             <h1 style="color: whitesmoke;">GIGs</h1>
+            <div class="gigs-container">
+            <!-- Individual gig entries will be dynamically added here -->
+
+            </div>
             
         </section>
          
