--- a/index.html
+++ b/index.html
@@ -89,14 +89,11 @@
          
             <section class="containter py-4 " id="musicSection">
                 <!--Music Player-->
-                <div class="embed-responsive embed-responsive-16by9">
-                <iframe width="50%" height="300"
-                scrolling="no" frameborder="no" 
-                allow="autoplay" 
-                src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/1929659739&color=%23006fff&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe>
-                <div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"><a href="https://soundcloud.com/longtooth-898384277" title="Longtooth" target="_blank" style="color: #cccccc; text-decoration: none;">Find us on Soundcloud</a> <a href="https://soundcloud.com/longtooth-898384277/sets/long-tooth" title="Long Tooth" target="_blank" 
-                    style="color: #cccccc; text-decoration: none;"></a></div>
+            <iframe width="70%" height="166" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/1974497775&color=%23003aff&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true"></iframe><div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"><a href="https://soundcloud.com/longtooth-898384277" title="Longtooth" target="_blank" style="color: #cccccc; text-decoration: none;">Longtooth</a> · <a href="https://soundcloud.com/longtooth-898384277/my-addiction-24" 
+                title="My Addiction 24" target="_blank" style="color: #cccccc; text-decoration: none;">My Addiction 24</a>
             </div>
+            <iframe width="70%" height="166" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/1997940103&color=%23003aff&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true"></iframe><div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"><a href="https://soundcloud.com/longtooth-898384277" title="Longtooth" target="_blank" style="color: #cccccc; text-decoration: none;">Longtooth</a> · <a href="https://soundcloud.com/longtooth-898384277/bleed-fo-you-24"
+                title="Bleed fo you 24" target="_blank" style="color: #cccccc; text-decoration: none;">Bleed fo you 24</a></div>
                 <!--End of music player block-->
 
             </section>
@@ -105,40 +102,19 @@
             <!--About Section-->
             <section class="container py-5" id="aboutSection"> 
                 <p>Located in Rochester NY, Long Tooth is a Metal band formed in 1997 by lead singer Jack Burnett and bass player Paul Van San.</p>
-                <h2>Meet The Band</h2>
+                <h2>The Band</h2>
             </section>
                 <div class="container" id="bandMemberContainer">
                     <div class="row"> 
-                        <div class="col-md-4 col-sm-6 d-flex mb-4 justify-content-center">
-                            <div class="card" style="  background-color: #100f0f;">
-                                <img src="./assets/img/musician2Compressed.jpg" class="card-img-top img-fluid mx-auto mt-3" alt="musician player who has long hair sitting in a chair looking straight forward">
-                                <div class="card-body">
-                                   <h5 class="card-title">Jack Burnett </h5> 
-                                   <h5 class="card-text card-text-center">Jack is lead and Rhythm guitar he is the lead singer and songwriter of Longtooth.</h5>
-                                </div>
-                            </div>
+                        <div class="col-md-4 col-sm-6">
+                            <img src="./assets/img/musician2Compressed.jpg" class="bandMember img-fluid">
                         </div>
-                        <!--/FirstBandMember-->
-                        <div class="col-md-4 col-sm-6 d-flex mb-4 justify-content-center">
-                            <div class="card" style="  background-color: #100f0f;">
-                                <img src="./assets/img/musician3Compressed.jpg" class="card-img-top img-fluid mx-auto mt-3" loading="lazy" alt="musician player who has long hair sitting in a chair looking straight forward">
-                                <div class="card-body">
-                                   <h5 class="card-title">Paul Van Sant</h5> 
-                                   <h5 class="card-text card-text-center"> Paul plays bass guitar for longtooth. Pual started playing the upstate New york thruway circuit in 1984 and has played with Rochester legend SCORCHER.</h5>
-                                </div>
-                            </div>
+                        <div class="col-md-4 col-sm-6">
+                            <img src="./assets/img/musician3Compressed.jpg" class=" bandMember img-fluid">
                         </div>
-                        <!--/SecondBandMember-->
-                        <div class="col-md-4 col-sm-6 d-flex mb-4 justify-content-center">
-                            <div class="card" style=" background-color: #100f0f;">
-                                <img src="./assets/img/musician1Compressed.jpg" class="card-img-top img-fluid mx-auto mt-3" loading="lazy" alt="musician player who has long hair sitting in a chair looking straight forward">
-                                <div class="card-body">
-                                   <h5 class="card-title">AJ Secash  </h5> 
-                                   <h5 class="card-text card-text-center">Aj is the drummer and percussionist For longtooth.  Aj has Played a variety of different projects and collaborations all over Rochester.</h5>
-                                </div>
-                            </div>
+                        <div class="col-md-4 col-sm-6">
+                            <img src="./assets/img/musician1Compressed.jpg" class="bandMember img-fluid">
                         </div>
-                        <!--ThirdBandMember-->
                     </div>
                     <!--/Row-->
             </div>
