--- a/index.html
+++ b/index.html
@@ -45,7 +45,6 @@
             <!--Hero/Welcome Section-->
             <section id="hero" class="d-flex justify-content-center align-items-center"> 
                 <!--<h2 class="text-black text-center">Longtooth</h2>-->
-           
                 <!--Carousel-->
                 <div id="carouselHeader" class="carousel slide" data-bs-ride="carousel"> 
                     <div class="carousel-inner">
@@ -103,17 +102,17 @@
             <section class="container py-5" id="aboutSection"> 
                 <p>Located in Rochester NY, Long Tooth is a Metal band formed in 1997 by lead singer Jack Burnett and bass player Paul Van San.</p>
                 <h2>The Band</h2>
-            </section>
+            
                 <div class="container" id="bandMemberContainer">
                     <div class="row"> 
                         <div class="col-md-4 col-sm-6">
-                            <img src="./assets/img/musician2Compressed.jpg" class="bandMember img-fluid">
+                            <img src="./assets/img/musician2Compressed.jpg" class="bandMember img-fluid mx-auto">
                         </div>
                         <div class="col-md-4 col-sm-6">
-                            <img src="./assets/img/musician3Compressed.jpg" class="bandMember img-fluid">
+                            <img src="./assets/img/musician3Compressed.jpg" class="bandMember img-fluid mx-auto">
                         </div>
                         <div class="col-md-4 col-sm-6">
-                            <img src="./assets/img/musician1Compressed.jpg" class="bandMember img-fluid">
+                            <img src="./assets/img/musician1Compressed.jpg" class="bandMember img-fluid mx-auto">
                         </div>
                     </div>
                     <!--/Row-->
