added contact area

--- a/index.html
+++ b/index.html
@@ -80,7 +80,6 @@
         <section id="gigs" class="gig-section container py-4 d-flex align-items-center justify-content-center ">
             <h3 style="color: whitesmoke;">Gigs</h3>
             <div class="gigs-container">
-                
             <!-- Individual gig entries will be dynamically added here --> 
             </div>
             <div>
@@ -128,7 +127,15 @@
 
             
             <section>
-                Contact form
+                <h3 style="color: whitesmoke;">Contact/Send message</h3>
+                <div class="mb-3">
+                    <label for="exampleFormControlInput1" class="form-label " style="color: whitesmoke;">Email address</label>
+                    <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
+                  </div>
+                  <div class="mb-3">
+                    <label for="exampleFormControlTextarea1" class="form-label" style="color: whitesmoke;">Example textarea</label>
+                    <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+                  </div>
             </section>
             <img src="./assets/img/groupPhoto3.jpg" loading="lazy" class="img-fluid opacity-75" alt="Three men sitting in chairs in front of a colorful wall filled with oranges and blues">
         </main>
