carousel picture fix

--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
                             <img src="./assets/img/bandMembers/updatedMusician3picCompressed.jpg" class="bandMember img-fluid mx-auto">
                         </div>
                         <div class="col-md-4 col-sm-6">
-                            <img src="./assets/img/bandMembers/musician1Compressed.jpg" class="bandMember img-fluid mx-auto">
+                            <img src="./assets/img/bandMembers/musician1Compressed.jpg class="bandMember img-fluid mx-auto">
                         </div>
                     </div>
                     <!--/Row-->
