--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
                             <img src="./assets/img/bandMembers/updatedMusician3picCompressed.jpg" class="bandMember img-fluid mx-auto">
                         </div>
                         <div class="col-md-4 col-sm-6">
-                            <img src="./assets/img/bandMembers/musician1Compressed.jpg class="bandMember img-fluid mx-auto">
+                            <img src="./assets/img/bandMembers/musician1Compressed.jpg" class="bandMember img-fluid mx-auto">
                         </div>
                     </div>
                     <!--/Row-->
@@ -150,7 +150,7 @@
                     <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
                   </div>
             </section>
-            <img src="./assets/img/groupPhoto3.jpg" loading="lazy" class="img-fluid opacity-75" alt="Three men sitting in chairs in front of a colorful wall filled with oranges and blues">
+            <img src="./assets/img/bandMembers/groupPhoto3Compressed.jpg" loading="lazy" class="img-fluid opacity-75" alt="Three men sitting in chairs in front of a colorful wall filled with oranges and blues">
         </main>
 
     
