added lazy loading to images

--- a/index.html
+++ b/index.html
@@ -52,15 +52,15 @@
                             <img src="./assets/img/bandMembers/groupPhoto2Compressed.jpg" loading="lazy" class="d-block img-fluid opacity-75" alt="Slide 1 photo is of 3 men in black leather jackets with sunglasses on standing infront of a brick wall">
                         </div>
                         <div class="carousel-item">
-                            <img src="./assets/img/carousel/CarouselImg2Compressed.jpg" class="d-block img-fluid" alt="Slide 2 man with long hair playing the bass infront of microphone with purple back lighting">
+                            <img src="./assets/img/carousel/CarouselImg2Compressed.jpg" loading="lazy" class="d-block img-fluid" alt="Slide 2 man with long hair playing the bass infront of microphone with purple back lighting">
                             
                         </div>
                         <div class="carousel-item">
-                            <img src="./assets/img/carousel/CarouselImg3Compressed.jpg" class="d-block  img-fluid" alt="Slide 3 man is sitting behind the drumb set pointing his finder at the camera with purple back lighting">
+                            <img src="./assets/img/carousel/CarouselImg3Compressed.jpg" loading="lazy" class="d-block  img-fluid" alt="Slide 3 man is sitting behind the drumb set pointing his finder at the camera with purple back lighting">
                             
                         </div>
                         <div class="carousel-item">
-                            <img src="./assets/img/bandMembers/groupPhoto3Compressed.jpg" class="d-block w-100 img-fluid" alt="Slide 4, group of band members all sitting on stools in front of a rustic color background">  
+                            <img src="./assets/img/bandMembers/groupPhoto3Compressed.jpg" loading="lazy" class="d-block w-100 img-fluid" alt="Slide 4, group of band members all sitting on stools in front of a rustic color background">  
                         </div>
                     </div>
                     <button class="carousel-control-prev" type="button" data-bs-target="#carouselHeader" data-bs-slide="prev">
@@ -123,13 +123,13 @@
                 <div class="container d-flex justify-content-center align-items-center" id="bandMemberContainer">
                     <div class="row"> 
                         <div class="col-md-4 col-sm-6">
-                            <img src="./assets/img/bandMembers/musician2Compressed.jpg" class="bandMember img-fluid mx-auto">
+                            <img src="./assets/img/bandMembers/musician2Compressed.jpg" loading="lazy" class="bandMember img-fluid mx-auto">
                         </div>
                         <div class="col-md-4 col-sm-6">
-                            <img src="./assets/img/bandMembers/updatedMusician3picCompressed.jpg" class="bandMember img-fluid mx-auto">
+                            <img src="./assets/img/bandMembers/updatedMusician3picCompressed.jpg"  loading="lazy" class="bandMember img-fluid mx-auto">
                         </div>
                         <div class="col-md-4 col-sm-6">
-                            <img src="./assets/img/bandMembers/musician1Compressed.jpg" class="bandMember img-fluid mx-auto">
+                            <img src="./assets/img/bandMembers/musician1Compressed.jpg" loading="lazy" class="bandMember img-fluid mx-auto">
                         </div>
                     </div>
                     <!--/Row-->
