--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
             </section>
 
         <section id="gigs" class="gig-section container d-flex align-items-center justify-content-center">
-            <div class="gigs-container container-fluid">
+            <div class="gigs-container">
                 <div class="row d-flex ">
                     <div class = "col-md-4 col-sm-6">
                         <h3 style="color: whitesmoke;">Upcoming Shows</h3>
