--- a/index.html
+++ b/index.html
@@ -49,7 +49,9 @@
                 <div id="carouselHeader" class="carousel slide" data-bs-ride="carousel"> 
                     <div class="carousel-inner">
                         <div class="carousel-item active">
-                            <img src="./assets/img/bandMembers/groupPhoto2Compressed.webp" loading="lazy" class="d-block img-fluid opacity-75" alt="Slide 1 photo is of 3 men in black leather jackets with sunglasses on standing infront of a brick wall">
+                            <img src="./assets/img/bandMembers/groupPhoto2Compressed.webp" 
+                            loading="lazy" class="d-block img-fluid opacity-75" 
+                            alt="Slide 1 photo is of 3 men in black leather jackets with sunglasses on standing infront of a brick wall">
                         </div>
                         <div class="carousel-item">
                             <img src="./assets/img/carousel/CarouselImg2Compressed.webp" loading="lazy" class="d-block img-fluid" alt="Slide 2 man with long hair playing the bass infront of microphone with purple back lighting">
@@ -124,14 +126,27 @@
                     <div class="row"> 
                         <div class="col-md-4 col-sm-6">
                             <img src="./assets/img/bandMembers/musician2Compressed.webp" 
-                            loading="lazy" class="bandMember img-fluid mx-auto" 
-                            alt="musician player who has long hair sitting in a chair looking straight forward">
+                            loading="lazy" 
+                            class="bandMember img-fluid mx-auto" 
+                            alt="musician player who has long hair sitting in a chair looking straight forward"
+                            width="300"
+                            height="400">
                         </div>
                         <div class="col-md-4 col-sm-6">
-                            <img src="./assets/img/bandMembers/updatedMusician3picCompressed.webp"  loading="lazy" class="bandMember img-fluid mx-auto" alt="Picture of man facing forward wearing a black leather jacket and a plack undershirt.">
+                            <img src="./assets/img/bandMembers/updatedMusician3picCompressed.webp"  
+                            loading="lazy"
+                             class="bandMember img-fluid mx-auto" 
+                             alt="Picture of man facing forward wearing a black leather jacket and a plack undershirt."
+                             width="300"
+                             height="400">
                         </div>
                         <div class="col-md-4 col-sm-6">
-                            <img src="./assets/img/bandMembers/musician1Compressed.webp" loading="lazy" class="bandMember img-fluid mx-auto" alt="Man sitting in chair facing forward, man is wearing a hat">
+                            <img src="./assets/img/bandMembers/musician1Compressed.webp" 
+                            loading="lazy" 
+                            class="bandMember img-fluid mx-auto" 
+                            alt="Man sitting in chair facing forward, man is wearing a hat"
+                            width="300"
+                            height="400">
                         </div>
                     </div>
                     <!--/Row-->
