--- a/index.html
+++ b/index.html
@@ -124,25 +124,21 @@
             
                 <div class="container d-flex justify-content-center align-items-center" id="bandMemberContainer">
                     <div class="row"> 
-                        <div class="col-md-4 col-sm-6">
+                        <div class="bandMember-item col-4 col-sm-4">
                             <img src="./assets/img/bandMembers/musician2Compressed.webp" 
-                            loading="lazy" 
-                            class="bandMember img-fluid mx-auto" 
-                            alt="musician player who has long hair sitting in a chair looking straight forward"
-                            width="300"
-                            height="400">
+                            class="bandMember " 
+                            alt="musician player who has long hair sitting in a chair looking straight forward">
                         </div>
-                        <div class="col-md-4 col-sm-6">
+                        <div class="bandMemberContainer  col-sm-4">
                             <img src="./assets/img/bandMembers/updatedMusician3picCompressed.webp"  
-                            loading="lazy"
-                             class="bandMember img-fluid mx-auto" 
+                             class="bandMember img-fluid" 
                              alt="Picture of man facing forward wearing a black leather jacket and a plack undershirt."
                              width="300"
                              height="400">
                         </div>
-                        <div class="col-md-4 col-sm-6">
+                        <div class="bandMemberContainer  col-sm-4">
                             <img src="./assets/img/bandMembers/musician1Compressed.webp" 
-                            loading="lazy" 
+                          
                             class="bandMember img-fluid mx-auto" 
                             alt="Man sitting in chair facing forward, man is wearing a hat"
                             width="300"
@@ -159,12 +155,12 @@
             <section>
                 <h3 style="color: whitesmoke;">Contact/Send message</h3>
                 <div class="mb-3">
-                    <label for="exampleFormControlInput1" class="form-label " style="color: whitesmoke;">Email address</label>
-                    <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
+                    <label for="FormControlInput1" class="form-label " style="color: whitesmoke;">Email address</label>
+                    <input type="email" class="form-control" id="FormControlInput1" placeholder="Email">
                   </div>
                   <div class="mb-3">
-                    <label for="exampleFormControlTextarea1" class="form-label" style="color: whitesmoke;">Example textarea</label>
-                    <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+                    <label for="FormControlTextarea1" class="form-label" style="color: whitesmoke;">Example textarea</label>
+                    <textarea class="form-control" id="FormControlTextarea1" rows="3"></textarea>
                   </div>
             </section>
             <img src="./assets/img/bandMembers/groupPhoto3Compressed.webp" loading="lazy" class="img-fluid opacity-75" alt="Three men sitting in chairs in front of a colorful wall filled with oranges and blues">
