--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
             </section>
 
             
-            <section>
+            <section class="contactSection">
                 <h3 style="color: whitesmoke;">Contact/Send message</h3>
                 <div class="mb-3">
                     <label for="FormControlInput1" class="form-label " style="color: whitesmoke;">Email address</label>
