--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                      <div class="gigs-contact col-md-4 col-sm-6">
                         <h3 style="color: whitesmoke;">Want to book us?</h2>
                             <div class="contact-btn">
-                            <button type="button" class="btn btn-outline-primary">Contact</button>
+                            <button type="button" class="btn btn-outline-primary"><a href="#contact-form">Contact</a></button>
                         </div>
                   </div>
 
@@ -215,7 +215,7 @@
             <!--/Contact Section-->
             <img src="./assets/img/bandMembers/groupPhoto3Compressed.webp" loading="lazy" class="img-fluid opacity-75" alt="Three men sitting in chairs in front of a colorful wall filled with oranges and blues">
         </main>
-           
+
         <!--Footer-->
         <footer class="bg-dark text-white text-center py-3" id="footer">
             <p>&copy; 2024 LongTooth | <a href="#" class="text-white">Privacy Policy</a></p>
