--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@
         <!-- Boostrap icons-->
         <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
 
+        <!--Google fonts-->
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>    
+        <link href="https://fonts.googleapis.com/css2?family=Metal+Mania&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+
         <title>LongTooth</title>
 
         <!--Stylesheet-->
@@ -131,8 +136,9 @@
                 <!--/Music Player-->
             <!--About Section-->
             <section class="container py-3" id="aboutSection"> 
+                <h1>Meet the Band</h1>
                 <p>Located in Rochester NY, Long Tooth is a Metal band that was formed in 1997 by lead singer Jack Burnett <br> and bass player Paul Van San.</p>
-                <h2>The Band</h2>
+               
                 <div class="container d-flex justify-content-center align-items-center" id="bandMemberContainer">
                     <div class="row"> 
 
@@ -142,7 +148,7 @@
                             class="bandMember-profile img-fluid" 
                             alt="musician player who has long hair sitting in a chair looking straight forward" 
                             style="object-position: top;">
-                            <p><strong>  Jack Burnett</strong></p>
+                            <p class="bandMember-name"><strong>  Jack Burnett</strong></p>
                             <p>Lead Singer</p>
                             <div class="bio-container">
                             <p class="preview-bio">Jack is lead and Rhythm guitar he is the lead singer and songwriter of Longtooth.</p>
@@ -161,7 +167,7 @@
                              class="bandMember-profile img-fluid" 
                              alt="Picture of man facing forward wearing a black leather jacket and a plack undershirt."
                              style="object-position: top;">
-                             <p> Paul Van Sant</p>
+                             <p class="bandMember-name"> <strong>Paul Van Sant</strong></p>
                              <p>Bass Player</p>
                              <div class="bio-container">
                              <p class="preview-bio">Paul plays bass guitar for longtooth. 
@@ -180,7 +186,7 @@
                             class="bandMember-profile img-fluid mx-auto" 
                             alt="Man sitting in chair facing forward, man is wearing a hat"
                             style="object-position: top;" >
-                            <p> AJ Secash </p>
+                            <p class="bandMember-name"><strong>AJ Secash</strong></p>
                             <p>Drummer</p>
                             <div class="bio-container">
                             <p class="preview-bio"> Aj is the drummer and percussionist For longtooth. 
