--- a/index.html
+++ b/index.html
@@ -6,8 +6,6 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <!--Bootstrap CSS-->
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet">
-        <!--Bootstrap-->
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet">
         <!-- Boostrap icons-->
         <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
 
@@ -52,7 +50,7 @@
         <!--End of Navigation Menu-->
         <header class="d-flex justify-content-between " style="background-color: black;">
             <div>
-                <img src="/assets/img/logo/logo.jpg" class="logoHeader img-fluid opacity-75" alt="Longtooths band is displayed in all caps in the color neon green. An illustration of a wold if placed in the center">
+                <img src="/assets/img/logo/logo.webp" class="logoHeader img-fluid opacity-75" alt="Longtooths band is displayed in all caps in the color neon green. An illustration of a wold if placed in the center">
             </div>
         </header>
         <main>
