--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                 </div>
             </section>
 
-        <section id="gigs" class="gig-section container d-flex align-items-center justify-content-center">
+        <section id="gigs" class="gig-section container">
             <div class="gigs-container">
                 <div class="row d-flex ">
                     <div class = "col-md-4 col-sm-6">
@@ -103,7 +103,7 @@
                         <h3 style="color: whitesmoke;">Want to book us?</h2>
                             <p>585-111-1111</p>
                             <div class="contact-btn">
-                            <button type="button" class="btn btn-outline-primary"><a href="#contact-form">Contact</a></button>
+                            <button type="button" class="btn btn-outline-primary" id="contactButton" alt="contact button"><a href="#contact-form">Email Us</a></button>
                         </div>
                   </div>
 
@@ -226,7 +226,7 @@
                   </div>
             </section>
             <!--/Contact Section-->
-            <img src="./assets/img/bandMembers/groupPhoto3Compressed.webp" loading="lazy" class="img-fluid opacity-75" alt="Three men sitting in chairs in front of a colorful wall filled with oranges and blues">
+            <img id="footerImage" src="./assets/img/bandMembers/groupPhoto3Compressed.webp" loading="lazy" class="img-fluid" alt="Three men sitting in chairs in front of a colorful wall filled with oranges and blues">
         </main>
 
         <!--Footer-->
