--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
             <div class="gigs-container">
                 <div class="row d-flex ">
                     <div class = "col-md-4 col-sm-6">
-                        <h1 style="color: whitesmoke;">Upcoming Shows</h1>
+                        <h1>Upcoming Shows</h1>
                         <!-- Individual gig entries will be dynamically added here --> 
                          <p>Lorem Ipsum</p>
                          <p>Lorem Ipsum</p>
@@ -100,8 +100,8 @@
                          <p>Lorem Ipsum</p>
                     </div>
                      <div class="gigs-contact col-md-4 col-sm-6">
-                        <h1 style="color: whitesmoke;">Want to book us?</h1>
-                            <p>585-111-1111</p>
+                        <h1 >Want to book us?</h1>
+                            <p>Tel: 585-111-1111</p>
                             <div class="contact-btn">
                             <button type="button" class="btn btn-outline-primary" alt="contact button"><a href="#contact-form">Email Us</a></button>
                         </div>
