--- a/index.html
+++ b/index.html
@@ -129,9 +129,9 @@
                          <div id="trackTitle">Bleed for You</div> <!-- Default title -->
                           <!-- Controls -->
                          <div class="controls">
-                        <button id="prevTrack"><i class="bi bi-skip-backward-fill"></i></button>
-                         <button id="playPause1"><i class="bi bi-play-fill"></i></button>
-                        <button id="nextTrack"><i class="bi bi-skip-forward-fill"></i></button>
+                        <button id="prevTrack" alt="backward button"><i class="bi bi-skip-backward-fill"></i></button>
+                         <button id="playPause1" alt="play button"><i class="bi bi-play-fill"></i></button>
+                        <button id="nextTrack" alt="next track button"><i class="bi bi-skip-forward-fill"></i></button>
                         </div>
                     </div>      
             </div>     
@@ -221,7 +221,7 @@
                   <div class="mb-3">
                     <label for="FormControlTextarea1" class="form-label" style="color: whitesmoke;">Message</label>
                     <textarea class="form-control" id="message" rows="3"></textarea>
-                    <button class="btn btn-outline-primary mt-3" type="submit">Send</button>
+                    <button class="btn btn-outline-primary mt-3" alt="Send button" type="submit">Send</button>
                   </form>
                   </div>
             </section>
