--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
                 <!--Navigation Links-->
             <div class="collapse navbar-collapse" id="mainNavBar">
                 <ul class="nav navbar-nav">
-                    <li><a href="#about" class="nav-link text-white">About</a></li>
-                    <li><a href="#listen" class="nav-link text-white">Listen</a></li>
+                    <li><a href="#aboutSection" class="nav-link text-white">About</a></li>
+                    <li><a href="#ourMusic" class="nav-link text-white">Listen</a></li>
                     <li><a href="#contact" class="nav-link text-white">Contact</a></li>
                   </ul>
             </div>
@@ -125,11 +125,9 @@
         <!--End of Gigs Section-->
 
             <!--Music Player-->
-           
             <div>
-                <h1 style="text-align: center; color: whitesmoke;">Our Music</h1>
-                <div id="music-player">
-                  
+                <h1 style="text-align: center; color: whitesmoke;" id="ourMusic">Our Music</h1>
+                <div id="music-player">                
  <!-------NEW SOUND CLOUD INSPIRED MUSIC PLAYER----->
                       <div class="media-player">
                         <div class="album-cover">
@@ -221,6 +219,7 @@
             <section class="contactSection">
                 <form id="contact-form">
                     <h1 style="color: whitesmoke;">Contact Us</h1>
+                    <p>Tel: 585-993-7272</p>
                 <div class="mb-3">
                     <label for="FormControlInput1" class="form-label" style="color: whitesmoke;">Full Name</label>
                     <input type="text" class="form-control" id="fullName" placeholder="Enter first and last name" required>
