--- a/index.html
+++ b/index.html
@@ -63,30 +63,30 @@
                 <div id="carouselHeader" class="carousel slide" data-bs-ride="carousel"> 
                     <div class="carousel-inner">
                         <div class="carousel-item active">
-                            <img src="./assets/img/bandMembers/groupPhoto2Compressed.webp" 
+                            <img src="./assets/img/groupPhoto2.webp" 
                             loading="lazy" class="d-block img-fluid opacity-75" 
                             alt="Slide 1 photo is of 3 men in black leather jackets with sunglasses on standing infront of a brick wall">
                         </div>
                         <div class="carousel-item">
-                            <img src="./assets/img/carousel/CarouselImg2Compressed.webp" loading="lazy" class="d-block img-fluid" alt="Slide 2 man with long hair playing the bass infront of microphone with purple back lighting">
+                            <img src="./assets/img/carousel/updatedCarouselImage2.webp" loading="lazy" class="d-block img-fluid" alt="Slide 2 man with long hair playing the bass infront of microphone with purple back lighting">
                         </div>
                         <div class="carousel-item">
                             <img src="./assets/img/carousel/carouselImage4.webp" loading="lazy" class="d-block img-fluid" alt="Slide 2 man with long hair playing the bass infront of microphone with purple back lighting">
                         </div>
                         <div class="carousel-item">
-                            <img src="./assets/img/carousel/groupImage5.webp" loading="lazy" class="d-block  img-fluid" alt="Slide 3 man is sitting behind the drumb set pointing his finder at the camera with purple back lighting">
+                            <img src="./assets/img/carousel/updatedGroupImae5.webp" loading="lazy" class="d-block  img-fluid" alt="Slide 3 man is sitting behind the drumb set pointing his finder at the camera with purple back lighting">
                         </div>
                         <div class="carousel-item">
-                            <img src="./assets/img/carousel/CarouselImg3Compressed.webp" loading="lazy" class="d-block  img-fluid" alt="Slide 3 man is sitting behind the drumb set pointing his finder at the camera with purple back lighting">
+                            <img src="./assets/img/carousel/CarouselImg3.webp" loading="lazy" class="d-block  img-fluid" alt="Slide 3 man is sitting behind the drumb set pointing his finder at the camera with purple back lighting">
                         </div>
                         <div class="carousel-item">
-                            <img src="./assets/img/carousel/groupImage4.webp" loading="lazy" class="d-block  img-fluid" alt="Slide 3 man is sitting behind the drumb set pointing his finder at the camera with purple back lighting">
-                        </div>
+                            <img src="./assets/img/carousel/fixedCarouselImage.webp" loading="lazy" class="d-block  img-fluid" alt="Slide 3 man is sitting behind the drumb set pointing his finder at the camera with purple back lighting">
+                        </div><!---->
                         <div class="carousel-item">
                             <img src="./assets/img/carousel/UpdatedCarouselImage5.webp" loading="lazy" class="d-block w-100 img-fluid" alt="Slide 4, group of band members all sitting on stools in front of a rustic color background">  
                         </div>
                         <div class="carousel-item">
-                            <img src="./assets/img/bandMembers/groupPhoto3Compressed.webp" loading="lazy" class="d-block w-100 img-fluid" alt="Slide 4, group of band members all sitting on stools in front of a rustic color background">  
+                            <img src="./assets/img/carousel/updatedGroupPhoto3.webp" loading="lazy" class="d-block w-100 img-fluid" alt="Slide 4, group of band members all sitting on stools in front of a rustic color background">  
                         </div>
                        
                     </div>
