--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                     <div class="carousel-inner">
                         <div class="carousel-item active">
                             <img src="./assets/img/groupPhoto2.webp" 
-                            loading="lazy" class="d-block img-fluid opacity-75" 
+                            loading="eagerly" class="d-block img-fluid opacity-75" 
                             alt="Slide 1 photo is of 3 men in black leather jackets with sunglasses on standing infront of a brick wall">
                         </div>
                         <div class="carousel-item">
