--- a/index.html
+++ b/index.html
@@ -19,6 +19,10 @@
         <!--Stylesheet-->
         <link rel="stylesheet" href="css/styles.css">
 
+
+        <!--Preload first carousel image-->
+        <link rel="preload" as="image" href="/assets/img/groupPhoto2.webp">
+
         <!--Emailjs script-->
         <script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js"></script>
         <script>
@@ -71,22 +75,22 @@
                             <img src="./assets/img/carousel/updatedCarouselImage2.webp" loading="lazy" class="d-block img-fluid" alt="Slide 2 man with long hair playing the bass infront of microphone with purple back lighting">
                         </div>
                         <div class="carousel-item">
-                            <img src="./assets/img/carousel/carouselImage4.webp" loading="lazy" class="d-block img-fluid" alt="Slide 2 man with long hair playing the bass infront of microphone with purple back lighting">
+                            <img src="./assets/img/carousel/carouselImage4.webp" loading="lazy" class="d-block img-fluid" alt="Slide 3 man with long hair playing the bass infront of microphone with purple back lighting">
                         </div>
                         <div class="carousel-item">
-                            <img src="./assets/img/carousel/updatedGroupImae5.webp" loading="lazy" class="d-block  img-fluid" alt="Slide 3 man is sitting behind the drumb set pointing his finder at the camera with purple back lighting">
+                            <img src="./assets/img/carousel/updatedGroupImae5.webp" loading="lazy" class="d-block  img-fluid" alt="Slide 4 man is sitting behind the drumb set pointing his finder at the camera with purple back lighting">
                         </div>
                         <div class="carousel-item">
-                            <img src="./assets/img/carousel/CarouselImg3.webp" loading="lazy" class="d-block  img-fluid" alt="Slide 3 man is sitting behind the drumb set pointing his finder at the camera with purple back lighting">
+                            <img src="./assets/img/carousel/CarouselImg3.webp" loading="lazy" class="d-block  img-fluid" alt="Slide 5 man is sitting behind the drumb set pointing his finder at the camera with purple back lighting">
                         </div>
                         <div class="carousel-item">
-                            <img src="./assets/img/carousel/fixedCarouselImage.webp" loading="lazy" class="d-block  img-fluid" alt="Slide 3 man is sitting behind the drumb set pointing his finder at the camera with purple back lighting">
+                            <img src="./assets/img/carousel/fixedCarouselImage.webp" loading="lazy" class="d-block  img-fluid" alt="Slide 6 man is sitting behind the drumb set pointing his finder at the camera with purple back lighting">
                         </div><!---->
                         <div class="carousel-item">
-                            <img src="./assets/img/carousel/UpdatedCarouselImage5.webp" loading="lazy" class="d-block w-100 img-fluid" alt="Slide 4, group of band members all sitting on stools in front of a rustic color background">  
+                            <img src="./assets/img/carousel/UpdatedCarouselImage5.webp" loading="lazy" class="d-block w-100 img-fluid" alt="Slide 7, group of band members all sitting on stools in front of a rustic color background">  
                         </div>
                         <div class="carousel-item">
-                            <img src="./assets/img/carousel/updatedGroupPhoto3.webp" loading="lazy" class="d-block w-100 img-fluid" alt="Slide 4, group of band members all sitting on stools in front of a rustic color background">  
+                            <img src="./assets/img/carousel/updatedGroupPhoto3.webp" loading="lazy" class="d-block w-100 img-fluid" alt="Slide 8, group of band members all sitting on stools in front of a rustic color background">  
                         </div>
                        
                     </div>
