--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                 <ul class="nav navbar-nav">
                     <li><a href="#aboutSection" class="nav-link text-white">About</a></li>
                     <li><a href="#ourMusic" class="nav-link text-white">Listen</a></li>
-                    <li><a href="#contact" class="nav-link text-white">Contact</a></li>
+                    <li><a href="#contact-form" class="nav-link text-white">Contact</a></li>
                   </ul>
             </div>
         </div>
