--- a/index.html
+++ b/index.html
@@ -75,20 +75,21 @@
                             <img src="./assets/img/carousel/updatedCarouselImage2.webp" loading="lazy" class="d-block img-fluid" alt="Slide 2 man with long hair playing the bass infront of microphone with purple back lighting">
                         </div>
                         <div class="carousel-item">
-                            <img src="./assets/img/carousel/carouselImage4.webp" loading="lazy" class="d-block img-fluid" alt="Slide 3 man with long hair playing the bass infront of microphone with purple back lighting">
+                            <img src="./assets/img/carousel/carouselImage4.webp" loading="lazy" class="d-block img-fluid" alt="Slide 3 man playing guitar">
                         </div>
                         <div class="carousel-item">
-                            <img src="./assets/img/carousel/updatedGroupImae5.webp" loading="lazy" class="d-block  img-fluid" alt="Slide 4 man is sitting behind the drumb set pointing his finder at the camera with purple back lighting">
+                            <img src="./assets/img/carousel/updatedGroupImae5.webp" loading="lazy" class="d-block  img-fluid" alt="Slide 4 men standing in front of bulding">
                         </div>
                         <div class="carousel-item">
                             <img src="./assets/img/carousel/CarouselImg3.webp" loading="lazy" class="d-block  img-fluid" alt="Slide 5 man is sitting behind the drumb set pointing his finder at the camera with purple back lighting">
                         </div>
                         <div class="carousel-item">
-                            <img src="./assets/img/carousel/fixedCarouselImage.webp" loading="lazy" class="d-block  img-fluid" alt="Slide 6 man is sitting behind the drumb set pointing his finder at the camera with purple back lighting">
-                        </div><!---->
+                            <img src="./assets/img/carousel/fixedCarouselImage.webp" loading="lazy" class="d-block  img-fluid" alt="Slide 6 3 men standing infron of brick building">
+                            </div>
                         <div class="carousel-item">
                             <img src="./assets/img/carousel/UpdatedCarouselImage5.webp" loading="lazy" class="d-block w-100 img-fluid" alt="Slide 7, group of band members all sitting on stools in front of a rustic color background">  
                         </div>
+
                         <div class="carousel-item">
                             <img src="./assets/img/carousel/updatedGroupPhoto3.webp" loading="lazy" class="d-block w-100 img-fluid" alt="Slide 8, group of band members all sitting on stools in front of a rustic color background">  
                         </div>
